comecei no conteudo

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
             <h1>Oi</h1>
         </header>
         <article>
-            <h2>T1</h2>
+            <h2>Simples Teste</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur magnam non natus mollitia veniam quis eum? Adipisci nostrum voluptatum nemo impedit veniam placeat praesentium modi optio voluptate, sequi odit perspiciatis?</p>
         </article>
         <article>
-            <h2>T2</h2>
+            <h2>Outro teste</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur magnam non natus mollitia veniam quis eum? Adipisci nostrum voluptatum nemo impedit veniam placeat praesentium modi optio voluptate, sequi odit perspiciatis?</p>
         </article>
     </main>
